[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SerOnly <seronly@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.19.0"
pydantic = "^2.7.3"
selenium = "^4.21.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
